--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "word-counter.ts",
+  "name": "shahmeer-haider/word counter",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
